# Minipc-LaptopBoardEsp8266Kiosk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyrightconfig.json  setup.cfg
.github/workflows/: ci.yml  security.yml
backend/: app_server.py  config.py  logging_config.py  pyudev.pyi  requirements.txt  serial_manager.py  serial_manager.pyi  usb_manager.py
backend/esp8266_firmware/: esp8266_firmware.ino
backend/migrations/: env.py
docs/: API.md  DEPLOYMENT.md  ENVIRONMENT.md  README.md
scripts/: backup.sh  backup_db.py  build_prod.sh
setup/: install.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  hardware.rs  main.rs
src/components/: Footer.tsx  Header.tsx  PaymentModal.tsx  ServiceCard.tsx  ServiceGrid.tsx  SplashScreen.tsx  StatusIndicator.tsx
src/components/admin/: AdminPanel.tsx  HeaderConfig.tsx  LogViewer.tsx  ServiceSettings.tsx  SystemSettings.tsx
src/hooks/: useAdminPanel.ts  useOrientation.ts  useSerialConnection.ts
src/store/: appStore.ts
src/types/: index.ts
src/utils/: formatting.ts
tests/: README.md  test_database.rs  test_hardware.rs
tests/backend/: conftest.py
tests/frontend/: setup.ts
